update footer for SEO

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 				<div class=" col-sm-6">
 					<h5 class="headin5_amrc col_white_amrc pt2">What is FPL Mania?</h5>
 					<!--headin5_amrc-->
-					<p class="mb10">FPL Mania is a player comparison tool to help FPL managers simulate player transfers as you would do on <a id="fpl_link" style="text-decoration:none;"href="https://fantasy.premierleague.com/">Fantasy Premier League's</a> official website. </p>
+					<p class="mb10">FPL Mania is a player comparison and a transfer planner FPL tool. It helps managers simulate player transfers similarly to the <a id="fpl_link" style="text-decoration:none;"href="https://fantasy.premierleague.com/">Fantasy Premier League</a> official website so you can visualize your squad in future gameweeks.</p>
 					<h5 class="headin5_amrc col_white_amrc pt2">Why should you use FPL Mania?</h5>
 					<!--headin5_amrc-->
 					<p class="mb10">The tool gathers and organizes all the important information regarding player performance like totals points, expected goals/assists, bonus points and non-penality goals. All data is aggregated from the Fantasy Premier League's official website and Understat.</p>
