--- a/about.html
+++ b/about.html
@@ -51,6 +51,9 @@
 	                <a class="nav-link" href="index.html">Home</a>
 	            </li>
 	            <li class="nav-item">
+	                <a class="nav-link" href="gameweek.html">Gameweek</a>
+	            </li>
+	            <li class="nav-item">
 	                <a class="nav-link" href="shop.html">Shop</a>
 	            </li>
 	            <li class="nav-item active">
