--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
 	                <a class="nav-link active" href="index.html">Home</a>
 	            </li>
 	            <li class="nav-item">
+	                <a class="nav-link" href="gameweek.html">Gameweek</a>
+	            </li>
+	            <li class="nav-item">
 	                <a class="nav-link" href="shop.html">Shop</a>
 	            </li>
 	            <li class="nav-item">
