--- a/shop.html
+++ b/shop.html
@@ -55,6 +55,9 @@
 	                <a class="nav-link" href="index.html">Home</a>
 	            </li>
 	            <li class="nav-item">
+	                <a class="nav-link" href="gameweek.html">Gameweek</a>
+	            </li>
+	            <li class="nav-item">
 	                <a class="nav-link active" href="shop.html">Shop</a>
 	            </li>
 	            <li class="nav-item">
