update titles and links for gameweek tab

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -100,6 +100,8 @@
 		<div class="container">
 			<ul class="foote_bottom_ul_amrc">
 				<li><a href="index.html">Home</a></li>
+				<li><a href="gameweek.html">Gameweek</a></li>
+				<li><a href="shop.html">Shop</a></li>
 				<li><a href="about.html">About</a></li>
 				<li><a href="sitemap.xml">Sitemaps</a></li>
 				<li><a href="privacy-policy.html">Privacy Policy</a></li>
