--- a/gameweek.html
+++ b/gameweek.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="FPL Mania is a player comparison tool to help FPL managers simulate player transfers as you would do on Fantasy Premier League's official website. ">
   	<meta name="keywords" content="fpl player comparison tool">
-	<title>FPL Mania | Shop</title>
+	<title>FPL Mania | Gameweek</title>
 	<!-- Google fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300" rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
@@ -34,7 +34,7 @@
 </head>
 <body>
 	<nav class="navbar navbar-custom navbar-expand-md navbar-dark bg-dark" style="background-color: #320936 !important;">
-	    <a class="navbar-brand" href="/index.html" style="white-space: pre-wrap;" id="title"><img style="width:10%" src="/FPL Mania.png"> FPL Mania | Shop</a>
+	    <a class="navbar-brand" href="/index.html" style="white-space: pre-wrap;" id="title"><img style="width:10%" src="/FPL Mania.png"> FPL Mania | Gameweek</a>
 	    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
 	        <span class="navbar-toggler-icon"></span>
 	    </button>
@@ -222,6 +222,7 @@
 		<div class="container">
 			<ul class="foote_bottom_ul_amrc">
 				<li><a href="index.html">Home</a></li>
+				<li><a href="gameweek.html">Gameweek</a></li>
 				<li><a href="shop.html">Shop</a></li>
 				<li><a href="about.html">About</a></li>
 				<li><a href="sitemap.xml">Sitemaps</a></li>
