--- a/index.html
+++ b/index.html
@@ -426,6 +426,7 @@
 		<div class="container">
 			<ul class="foote_bottom_ul_amrc">
 				<li><a href="index.html">Home</a></li>
+				<li><a href="gameweek.html">Gameweek</a></li>
 				<li><a href="shop.html">Shop</a></li>
 				<li><a href="about.html">About</a></li>
 				<li><a href="sitemap.xml">Sitemaps</a></li>
