additional info gameweek page

--- a/gameweek.html
+++ b/gameweek.html
@@ -143,22 +143,37 @@
 			<div class="w-100"></div>
 			<div class="col-md-4 align-items-center">
 				<div class="row align-items-center">
-					<div class="col" style="border-bottom:1px solid #cecece;">
+					<div class="col user_transfers">
+						<label><strong>Team Name</strong></label><br>
+						<label id="team-name"></label>
+					</div>
+					<div class="w-100"></div>
+					<div class="col user_transfers">
+						<label><strong>Overall Points</strong></label><br>
+						<label id="overall-points"></label>
+					</div>
+					<div class="w-100"></div>
+					<div class="col user_transfers">
+						<label><strong>Overall Rank</strong></label><br>
+						<label id="overall-rank"></label>
+					</div>
+					<div class="w-100"></div>
+					<div class="col user_transfers">
 						<label><strong>Active Chip</strong></label><br>
 						<label id="active_chip"></label>
 					</div>
 					<div class="w-100"></div>
-					<div class="col" style="border-bottom:1px solid #cecece;">
+					<div class="col user_transfers">
 						<label><strong>Highest Score</strong></label><br>
 						<label id="highest_score"></label>
 					</div>
 					<div class="w-100"></div>
-					<div class="col" style="border-bottom:1px solid #cecece;">
+					<div class="col user_transfers">
 						<label><strong>Transfer Cost</strong></label><br>
 						<label id="transfer_cost"></label>
 					</div>
 					<div class="w-100"></div>
-					<div class="col" style="border-bottom:1px solid #cecece;">
+					<div class="col user_transfers">
 						<label><strong>Transfers Made</strong></label><br>
 						<label id="transfers_made_hs"></label>
 					</div>
